loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:1: error: not found: value a
a=0
^Poucet1:5: error: not found: value a
    a=a+1
    ^Poucet1:7: error: not found: value a
if (a>=3) {
    ^