loopdowhile.Poucet1.scala.code
a=0
for(c2<- 1 to 15){
for (c1<- 1 to 5){
  avance();if (estSurBiscuit()){
    a=a+1
  }  
if (a>=3) {
  gauche()
}else{
  droite()
}}
  }